<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-open-rao</artifactId>
        <version>7.2.0-SNAPSHOT</version>
    </parent>

    <artifactId>open-rao-pst-regulation</artifactId>
    <packaging>jar</packaging>
    <name>PST Regulation</name>
    <description>Post-RAO PST regulatoin module</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>open-rao-rao-result-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>open-rao-rao-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>open-rao-util</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-open-loadflow</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>open-rao-sensitivity-analysis</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>open-rao-search-tree-rao</artifactId>
        </dependency>
    </dependencies>

</project>